hr_deploy/21.4.23/3-Service/testhr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testhr-service
spec:
  selector:
    app: testhr
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
